--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -12,7 +12,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+#root {
+  min-width: 80%;
+  margin: 0 auto;
+}
 a {
   font-weight: 500;
   color: #646cff;
@@ -34,7 +37,34 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
+.top {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.buttons {
+  display: flex;
+}
+.top button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+/* .cardbox { */
+/*   display: grid; */
+/*   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); */
+/* } */
+.cardbox {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.cardbox img {
+  width: 200px;
+}
+.card p {
+  text-align: center;
+}
 button {
   border-radius: 8px;
   border: 1px solid transparent;
