--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -28,7 +28,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
@@ -41,9 +41,19 @@ h1 {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  align-items: center;
 }
 .buttons {
   display: flex;
+  gap: 15px;
+  & > button {
+    padding: 0em 1em;
+  }
+  & > h3,
+  p {
+    padding: 0.7em 1em;
+    margin: 0;
+  }
 }
 .top button {
   display: flex;
@@ -58,12 +68,39 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 15px;
 }
 .cardbox img {
   width: 200px;
 }
 .card p {
   text-align: center;
+}
+div:has(> .init) {
+  display: flex;
+  justify-content: center;
+}
+.init {
+  display: flex;
+  flex-direction: column;
+}
+.init-buttons {
+  display: flex;
+  justify-content: space-between;
+  & > button {
+    border: 2px solid pink;
+  }
+}
+.card {
+  border-radius: 8px;
+  border: 2px solid grey;
+  transition: border-color 0.25s;
+  background-color: black;
+}
+.card:hover {
+  /* border-color: #1dab07; */
+  border-color: #1dab07;
+  background-color: #006606;
 }
 button {
   border-radius: 8px;
